Добавлена JWT-аутентификация и система управления сессиями